--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 <!-- Contingut principal -->
 <div class="content-container">
 <h1>Benvinguts</h1>
-    <p>Soc en Teo, alumne de programació de 1r de batxillerat tecnològic de <a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">l'Institut Pompeu Fabra de Martorell</a></p></p>
+    <p>Soc en Teo, alumne de robótica i programació de 1r de batxillerat tecnològic de <a href="https://agora.xtec.cat/ies-pompeu-fabra-martorell/">l'Institut Pompeu Fabra de Martorell</a></p></p>
     <p>Vaig aprendre a programar en <a href=https://tlaplana.neocities.org/>HTML</a> a 3r de la ESO</p>
  <p>Llistat dels diferents projectes que fare durant el curs:</p>
     <ul>
