--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ body {
     <p>Vaig aprendre a programar en <a href=https://tlaplana.neocities.org/>HTML</a> a 3r de la ESO</p>
  <p>Llistat dels diferents projectes que fare durant el curs:</p>
     <ul>
+        <li>codis amb Javascript,CSS i HTML que construiran una pàgina web on l'usuari introduirà diferents dades d'un braç robotic i el sistema ens calculara altres dades i les representara visualment</li>
+        <!--ul significa llista desordenada unordened list i ol ordened list o llista ordenada amb numeros i cada li és un element de la llista-->
         <li>Creació d'una obra d'art geomètrica interactiva que reaccioni a diferents variables asignades amb p5.js.</li>
         <li>Projecte de farmacocinetica.</li>
         <li>Aliments ecològics i convencionals amb C++.</li>
